--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# True for development, False for production
-DEBUG=True
-
-# Flask ENV
-FLASK_APP=app.py
-FLASK_ENV=development
+GOOGLE_APPLICATION_CREDENTIALS="primeval-gizmo-406722-d94f4e74be2e.json"
+OPENAI_API_KEY = "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"
+HUGGINGFACE_API_KEY = "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"
+GCP_PROJECT="primeval-gizmo-406722"
+LOCATION="us-central1" 
