Integrating TruLens with Vertex AI

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GOOGLE_APPLICATION_CREDENTIALS="primeval-gizmo-406722-d94f4e74be2e.json"
-OPENAI_API_KEY = "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"
+GOOGLE_APPLICATION_CREDENTIALS="./static/Front/assets/lablabai-406919-e0c47d25bf7d.json"
+OPENAI_API_KEY = "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"
 HUGGINGFACE_API_KEY = "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"
-GCP_PROJECT="primeval-gizmo-406722"
+GCP_PROJECT="lablabai-406919"
 LOCATION="us-central1" 
