--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .venv
 .env
 .streamlit
-static/Front/assets/lablabai-406919-e0c47d25bf7d.json
+static/Front/assets/lablabai-406919-4d88ebc3542f.json
+database.json
+database.sqlite
+default.sqlite
+venv
