--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ database.json
 database.sqlite
 default.sqlite
 venv
+static/Front/assets/lablabai-406919-e0c47d25bf7d.json
+static/Front/assets/lablabai-406919-e0c47d25bf7d.json
